# hashi-gen

./: README.md  pyproject.toml
autohooks/: build.py
hashi_gen/: __init__.py
hashi_gen/logic/: __init__.py
hashi_gen/map/: __init__.py
hooks/: __init__.py  assert_files.py  autoimport.py  clean.py  mdformat.py  pydoclint.py  pydocstyle.py  tomlsort.py  update_dependencies.py
tests/: test_logic.py  test_map.py
